fixes the spacing with image on the homepage

--- a/app/assets/stylesheets/main.css.less
+++ b/app/assets/stylesheets/main.css.less
@@ -289,6 +289,11 @@ z-index: 11;
     background-color: transparent;
     z-index: 100;
   padding-top: 10px;
+}
+
+#logostyle2 {
+    background-color: transparent;
+    z-index: 100;
   margin-top: -10px;
 }
         
